--- a/sass/partials/_blog-page.scss
+++ b/sass/partials/_blog-page.scss
@@ -10,7 +10,7 @@
 		height: 40rem;
 		background-size: cover;
 		background-position: top;
-		margin: 2rem 0;
+		margin: 0 0 2rem;
   }
 
   &__content {
